--- a/apps/book/templates/book/authors/author_confirm_delete.html
+++ b/apps/book/templates/book/authors/author_confirm_delete.html
@@ -7,9 +7,9 @@
     <form method="POST">
         {% csrf_token %}
         <p>Are you sure you want to delete the author "{{ object }}"?</p>
-        <button type="submit" class="btn btn-primary">Delete</button>
+        <button type="submit" class="btn primary-btn">Delete</button>
 
-        <a href="{% url 'book:list_authors' %}" class="btn btn-secondary">Cancel</a>
+        <a href="{% url 'book:list_authors' %}" class="btn secondary-btn">Cancel</a>
     </form>
 
     {% endblock content %}
