--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,18 +7,16 @@
     --bg-primary: #f9f9f9;
     --bg-secondary: #e8e6e1;
 
-    --primary-colour: #6f4e37; /* Anthracite Gray */
+    --primary-colour: #6f4e37;
     --secondary-colour: #3d5d78;
-    --secondary1-colour: #aa9581; /* Soft Coral */
+    --secondary1-colour: #aa9581;
 
-    /* Text */
-    --text-primary: #3d5d78; /* Dark Gray */
-    --text-secondary: #aebacd; /* Medium Gray */
+    --text-primary: #3d5d78;
 
     /* Buttons */
-    --btn-primary: #264653; /* Sapphire Blue */
-    --btn-error: #e43c3c; /* Soft Coral */
-    --btn-edit: #f9c646; /* Soft Mustard */
+    --btn-primary: #aa9581;
+    --btn-error: #e43c3c;
+    --btn-edit: #f9c646;
 
     /* Accents / Icons */
     --accent: #2a9d8f; /* Forest Green */
@@ -40,6 +38,7 @@ h5,
 h6 {
     font-family: 'Lato', sans-serif;
     color: var(--primary-colour);
+    font-weight: 600;
 }
 
 p {
@@ -106,28 +105,28 @@ p {
 
 /* Buttons */
 .primary-btn {
+    background-color: var(--btn-primary) !important;
+    color: var(--bg-primary) !important;
+    font-weight: 500;
+    justify-content: center;
+}
+
+.primary-btn:hover {
+    background-color: var(--bg-primary) !important;
+    color: var(--btn-primary) !important;
+    border-color: var(--btn-primary);
+}
+
+.secondary-btn {
     background-color: #ffffff !important;
     color: var(--text-primary) !important;
     font-weight: 600;
     border-color: var(--text-primary);
     justify-content: center;
 }
-.primary-btn:hover {
-    background-color: var(--text-primary) !important;
-    color: var(--bg-primary) !important;
-    border-color: var(--text-primary);
-}
-
-.secondary-btn {
-    background-color: var(--text-primary) !important;
-    color: var(--bg-primary) !important;
-    font-weight: 600;
-    justify-content: center;
-}
-
 .secondary-btn:hover {
-    background-color: var(--bg-primary) !important;
-    color: var(--text-primary) !important;
+    background-color: var(--text-primary) !important;
+    color: var(--bg-primary) !important;
     border-color: var(--text-primary);
 }
 
@@ -179,7 +178,7 @@ p {
 .table-custom {
     --bs-table-bg: #ffffff;
     --bs-table-striped-bg: var(--bg-primary);
-    --bs-table-striped-color: var(--secondary1-colour);
+    --bs-table-striped-color: var(--btn-primary);
     --bs-table-hover-bg: rgba(252, 113, 92, 0.1);
     --bs-table-hover-color: var(--primary-colour);
     --bs-table-border-color: var(--primary-colour);
