--- a/apps/book/templates/book/books/available_books.html
+++ b/apps/book/templates/book/books/available_books.html
@@ -18,20 +18,22 @@
         <div class="container-fluid px-4">
             <div class="row g-5">
                 {% for book in object_list %}
-                <div class="col-12 col-sm-6 col-lg-4">
+                <div class="col-12 col-sm-6 col-lg-4 col-xxl-3">
                     <a href="{% url 'book:book_detail' book.pk %}" class="text-decoration-none text-dark ">
-                        <div class="card h-100 custom-card-shadow">
+                        <div class="card card-view h-100 custom-card-shadow">
                             <div class="card-img-container">
                                 <img class="card-img-top img-card" src="{{ book.image.url }}" alt="{{ book.title }}">
                             </div>
-                            <div class="card-body d-flex flex-column">
+                            <div class="card-body card-body-view d-flex flex-column">
                                 <h4 class="card-title mb-3 fw-semibold fs-4 text-center">{{ book.title }}</h4>
                                 <p class="card-text fw-semibold fs-6 text-center highlight-txt">
                                     Autor: {{ book.get_authors }}
                                 </p>
-                                <p class="card-text">{{ book.description | truncatewords:20 }}</p>
-                                <a href="{% url 'book:book_detail' book.pk %}"
-                                    class="btn primary-btn w-100 m-auto mt-3">View</a>
+                                <p class="card-text text-center">{{ book.description | truncatewords:15 }}</p>
+                                <div class="mt-auto text-center">
+                                    <a href="{% url 'book:book_detail' book.pk %}"
+                                        class="btn primary-btn view-btn text-center m-auto mt-3">View</a>
+                                </div>
                             </div>
                         </div>
                     </a>
