--- a/apps/book/templates/book/index.html
+++ b/apps/book/templates/book/index.html
@@ -5,9 +5,9 @@
 <!-- index.html content starts here -->
 <div class="col-md-12 prueba">
 
-    <div class="card bg-primary">
-        <div class="card-body">
-            <blockquote class="blockquote mb-0 text-light text-center">
+    <div class="card shadow-none border-0 home-page">
+        <div class="card-body no-shadow ">
+            <blockquote class="blockquote mb-0  text-center">
                 <h1 class="text-light">{{ user.username | upper }}
                     <br> Welcome to Bookaroo!
                 </h1>
