--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block extra_css %}
 
+
     {% endblock extra_css %}
 
     {% block head_extra %}{% endblock head_extra %}
@@ -177,10 +178,10 @@
                     <a class="navbar-brand" href="{% url 'index' %}">Bookaroo</a>
 
                     <!-- User dropdown menu -->
-                    <a href="#" class="nav-link dropdown-toggle d-flex align-items-center me-4"
+                    <a href="#" class="nav-link member-area dropdown-toggle d-flex align-items-center me-4"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         <h4 class="me-4 member">{{ user.username | capfirst }}</h4>
-                        <img class="rounded-circle me-2" src="{% static 'images/admin1.png' %}" alt="User Avatar"
+                        <img class="rounded-circle me-2 member" src="{% static 'images/admin.svg' %}" alt="User Avatar"
                             width="32" height="32">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
@@ -218,17 +219,16 @@
                         {% endwith %}
                         {% endif %}
                     </ul>
-                    <!-- </li>
-                        </ul>
-                    </div> -->
+
                 </div>
             </nav>
 
             <!-- Main content -->
-            <main class="main_right container-fluid py-3 bg-custom">
+            <main class="main_right custom-container py-3 bg-custom">
                 <div class="row">
                     <div class="col-12">
                         {% block content %}
+
                         {% endblock content %}
                     </div>
                 </div>
