Implement landing page

--- a/apps/book/templates/book/authors/create_author.html
+++ b/apps/book/templates/book/authors/create_author.html
@@ -10,5 +10,6 @@
         {{ form.as_p }}
         <button type="submit" class="btn secondary-btn">Save Author</button>
     </form>
+</div>
 
-    {% endblock content %}
+{% endblock content %}
