--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,26 +1,26 @@
-/* Google Fonts  */
-/* @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700'); */
-
-/* VARIABLES */
+/* -------------------------------------------------
+   2. VARIABLES (THEME)
+-------------------------------------------------- */
 :root {
     /* Backgrounds */
     --bg-primary: #f9f9f9;
     --bg-secondary: #e8e6e1;
 
     --primary-colour: #6f4e37;
-    --secondary-colour: #3d5d78;
 
     --text-primary: #3d5d78;
+    --text-secondary: #aebacd;
 
-    /* Buttons */
     --btn-primary: #aa9581;
     --btn-error: #e43c3c;
     --btn-edit: #f9c646;
 
-    /* Accents / Icons */
-    --accent: #2a9d8f; /* Forest Green */
+    --accent: #2a9d8f;
 }
-/* RESETS */
+
+/* -------------------------------------------------
+   3. RESETS & BASE STYLES
+-------------------------------------------------- */
 body {
     font-family: 'Lato', sans-serif;
     background-color: var(--bg-primary);
@@ -46,37 +46,75 @@ p {
     line-height: 1.6;
 }
 
-/* GLOBAL LAYOUT */
-/* Structure: sidebar + content */
-
-.home-page {
-    background-image: url(../images/home-image.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    object-fit: cover;
+a {
+    text-decoration: none !important;
+    color: var(--text-secondary);
 }
 
+/* -------------------------------------------------
+   4. LAYOUT (general layout, sidebar)
+-------------------------------------------------- */
+/* landing page */
+.landing-wrapper {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.landing-container {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    width: 90%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+}
+/* index page */
+.index-custom-container {
+    width: 100%; /* Ocupa todo el ancho */
+    height: 100%;
+    position: relative;
+    min-height: 100vh; /* Ocupa toda la altura de la ventana */
+    padding: 0; /* Quita padding si quieres que el contenido llegue al borde */
+}
+main.index-custom-container {
+    background-color: var(--bg-primary);
+    padding-left: 0 !important;
+    padding: 0 !important;
+}
+
+/* share layout */
 .layout {
     display: block;
 }
+
+.home-page {
+    background-color: #f9f6f1;
+}
+
+#sidebar {
+    --bs-offcanvas-width: 260px;
+    padding-top: 55px;
+}
+
 #sidebar .navlink {
     color: var(--text-primary);
     font-weight: 600;
     margin: 0.2rem 0;
     padding: 0.5rem 1rem;
 }
-/* #sidebar .nav-link.active {
-    color: #f9f9f9;
-    background-color: var(--secondary1-colour) !important;
-} */
 
-.nav-footer-bg {
-    background-color: var(--primary-colour);
-    color: #ffffff;
-    font-weight: 600;
-    border: none;
+#sidebar .nav-link {
+    border-radius: 0.375rem;
 }
 
+/* -------------------------------------------------
+   5. NAVIGATION (Navbar & Footer)
+-------------------------------------------------- */
 .navbar-brand {
     color: var(--bg-primary) !important;
     margin-left: 3rem;
@@ -103,13 +141,44 @@ p {
     border-radius: 10px;
 }
 
-.nav-link {
-    transition: all 0.25s ease-in-out;
+.nav-footer-bg {
+    background-color: var(--primary-colour);
+    color: #ffffff;
+    font-weight: 600;
+    border: none;
 }
 
-/* REUSABLE COMPONENTS */
+.footer p {
+    text-align: center;
+    padding: 1rem 0;
+    color: var(--btn-primary) !important;
+    margin: 0 auto;
+    width: 100vw;
+}
+
+/* -------------------------------------------------
+   6. COMPONENTS
+-------------------------------------------------- */
 
 /* Buttons */
+/* landing */
+.buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    width: 100%;
+    margin-top: 1rem;
+}
+/* landing */
+.btn {
+    padding: 0.75rem 1.5rem;
+    border-radius: 8px;
+    text-decoration: none;
+    font-weight: 600;
+    text-align: center;
+    transition: 0.3s ease;
+}
+
 .primary-btn {
     background-color: var(--btn-primary) !important;
     color: var(--bg-primary) !important;
@@ -121,7 +190,7 @@ p {
     background-color: #ffffff !important;
     color: var(--text-primary) !important;
     font-weight: 600;
-    border-color: var(--text-primary);
+    border: 1px solid var(--text-primary);
     justify-content: center;
 }
 
@@ -134,18 +203,18 @@ p {
 
 .btn-edit {
     background-color: var(--btn-edit);
-    color: var(--secondary-colour);
+    color: var(--text-secondary);
     border: 1px solid var(--btn-edit);
 }
 
 .btn-edit-sm {
-    background-color: var(--secondary-colour);
+    background-color: var(--text-secondary);
     color: var(--bg-primary);
 }
 
 .btn-delete {
     border: none;
-    background-color: #e43c3c;
+    background-color: var(--btn-error);
 }
 
 .btn-active {
@@ -160,7 +229,12 @@ p {
     opacity: 0.5;
 }
 
-/* tables */
+.btn-toggle {
+    color: #f9f9f9 !important;
+    border-color: #f9f9f9 !important;
+}
+
+/* Tables */
 .table-custom {
     --bs-table-bg: #ffffff;
     --bs-table-striped-bg: var(--bg-primary);
@@ -177,7 +251,6 @@ p {
 }
 
 /* Cards */
-
 .card-view {
     display: flex;
     flex-direction: column;
@@ -192,6 +265,7 @@ p {
 .view-btn {
     margin-top: auto;
 }
+
 .custom-card-shadow {
     box-shadow: 0 4px 12px rgba(111, 78, 55, 0.5);
 }
@@ -211,10 +285,6 @@ p {
     background: linear-gradient(to bottom, rgba(111, 78, 55, 0.2), #ffffff);
 }
 
-.bg-custom {
-    background-color: #f9f9f9 !important;
-}
-
 .img-card {
     width: 100%;
     height: 100%;
@@ -223,12 +293,25 @@ p {
     box-shadow: 0 4px 12px rgba(248, 249, 250, 0.15);
 }
 
-table {
-    width: auto;
-    table-layout: auto;
+/* .bg-custom {
+    background-color: #f9f6f1 !important;
+} */
+/* landing */
+.title {
+    font-size: 2.2rem;
+    font-weight: 600;
+    color: var(--primary-colour);
 }
 
-/* UTILITIES */
+.subtitle {
+    font-size: 1.2rem;
+    color: var(--primary-colour);
+    margin-bottom: 1.5rem;
+}
+
+/* -------------------------------------------------
+   7. UTILITIES
+-------------------------------------------------- */
 p.highlight-txt {
     color: var(--text-primary);
     font-weight: 600;
@@ -238,10 +321,15 @@ p.highlight-txt {
     font-weight: 600;
     color: #fff;
 }
+
+.no-style li {
+    list-style: none;
+}
+
 .img-book-detail-container {
     width: 100%;
     height: 100%;
-    max-height: 600px; /* límite máximo del card */
+    max-height: 600px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -262,35 +350,79 @@ p.highlight-txt {
     overflow: hidden;
 }
 
-.btn-toggle {
-    color: #f9f9f9 !important;
-    border-color: #f9f9f9 !important;
+table {
+    width: auto;
+    table-layout: auto;
 }
 
-/* RESPONSIVE DESIGN */
+/* -------------------------------------------------
+   8. RESPONSIVE DESIGN
+-------------------------------------------------- */
 @media (min-width: 768px) {
+    body {
+        background: url('../images/background_landing.png') no-repeat center center !important;
+        background-size: contain !important;
+    }
+    /* landing page */
+    .landing-wrapper {
+        min-height: 100vh;
+        align-items: flex-start;
+    }
+
+    .landing-container {
+        justify-content: center;
+        align-items: flex-start;
+        text-align: left;
+    }
+
+    .title {
+        font-size: 3rem;
+        padding-left: 15%;
+    }
+
+    .subtitle {
+        font-size: 1.25rem;
+        padding-left: 15%;
+    }
+
+    .buttons {
+        flex-direction: row; /* botones en línea */
+        gap: 1rem;
+        width: auto;
+        padding-left: 15%;
+    }
+
+    .btn {
+        width: auto;
+    }
+
+    /* index page */
+    main.main_right.index-custom-container {
+        width: 100%;
+        height: 100%;
+        padding-left: 0 !important;
+        background-color: #f9f6f1;
+    }
     main.main_right {
         padding-left: 220px !important;
     }
-    /* lg */
+
     .layout {
         display: flex;
     }
+
     .member-area:hover {
         scale: 1.1;
         color: var(--btn-primary) !important;
     }
+
     .member:hover {
         color: var(--btn-primary) !important;
     }
 
-    .navbar-link .main_right {
-        padding-left: 220px;
-        padding-right: 4rem !important;
-    }
     #sidebar {
         visibility: visible !important;
-        transform: none !important; /* offcanvas “static” */
+        transform: none !important;
     }
 
     .img-card:hover {
@@ -310,42 +442,19 @@ p.highlight-txt {
         scale: 1.05;
         color: #f9f9f9;
     }
+
     .btn-edit:hover {
         background-color: #f9d26f;
         scale: 1.05;
     }
-    .secondary-btn:hover {
-        background-color: var(--text-primary) !important;
-        color: var(--bg-primary) !important;
-        border-color: var(--text-primary);
-    }
     .primary-btn:hover {
         background-color: var(--bg-primary) !important;
         color: var(--btn-primary) !important;
-        border-color: var(--btn-primary);
+        border: 1px solid var(--btn-primary) !important;
+    }
+    .secondary-btn:hover {
+        background-color: var(--text-primary) !important;
+        color: var(--bg-primary) !important;
+        border: 1px solid var(--text-primary) !important;
     }
 }
-
-a {
-    text-decoration: none !important;
-    color: var(--text-secondary);
-}
-/* Width of the offcanvas sidebar */
-#sidebar {
-    --bs-offcanvas-width: 260px; /* Bootstrap allows adjusting the width via custom property */
-    padding-top: 55px;
-}
-
-/* Optional visual adjustments */
-#sidebar .nav-link {
-    border-radius: 0.375rem;
-}
-
-.no-style li {
-    list-style: none;
-}
-
-/* .blue-navbar {
-    background-color: var(--primary-colour) !important;
-    color: #ffffff !important;
-} */
