Refactor templates and styles for improved UI/UX

--- a/apps/book/templates/book/books/available_books.html
+++ b/apps/book/templates/book/books/available_books.html
@@ -4,7 +4,7 @@
 {% block extra_css %}
 {% endblock extra_css %}
 {% block content %}
-<div class="card shadow-none border-0 ">
+<div class="card shadow-none border-0 bg-custom">
     <div class="card-header border-0">
         <div class="row" style="margin: 30px;">
             <div class="col-md-12 text-center ">
