--- a/apps/book/templates/book/books/available_book_detail.html
+++ b/apps/book/templates/book/books/available_book_detail.html
@@ -15,8 +15,9 @@
 {% endblock extra_css %}
 
 {% block content %}
+<!-- Here starts the available book detail content-->
 <div class="container my-5">
-    <div class="card shadow-lg border-0 p-3 overflow-hidden">
+    <div class="card shadow-lg border-0 p-3 overflow-hidden bg-custom me-4">
         <div class="row g-4 h-100 align-items-start">
 
             <!--  Left side: image -->
