--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
                         </li>
 
                         {% if request.user.is_superuser %}
-                        <li class="nav-item dropdown">
+                        <!-- <li class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" role="button"
                                 aria-expanded="false">
                                 <i class="fa fa-users me-2"></i> Users
@@ -81,7 +81,7 @@
                                     <a class="dropdown-item" href="#"><i class="fa fa-table me-2"></i> Users List</a>
                                 </li>
                             </ul>
-                        </li>
+                        </li> -->
 
                         <li class="nav-item dropdown">
                             <a href="#"
@@ -223,8 +223,8 @@
 
             <!-- Main content -->
             <main class="main_right py-3 bg-custom {% block main_class %}{% endblock main_class %}">
-                <div class="row ">
-                    <div class="col-12">
+                <div class="row h-100">
+                    <div class="col-12 h-100">
                         {% block content %}
 
                         {% endblock content %}
